@@ -48,6 +48,7 @@
 * Moneris: Add Google Pay [sinourain] #4666
 * Global Collect: Add transaction inquire request [almalee24] #4669
 * Stripe PI: Add Level 3 support [almalee24] #4673
+* Braintree: return additional processor response [jcreiff] #4653
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
